# pulse

./: .gitignore  README.md  README_CN.md  README_EN.md  com.pulse.daemon.plist  com.pulse.web.plist  config.yaml  pyproject.toml  requirements.txt  setup.py  start.sh
.claude/: CLAUDE.md
.claude/analysts/: commits.md  issues.md  prs.md  synthesis.md
pulse/: __init__.py  cli.py  config.py  daemon.py  main.py
pulse/analyzers/: __init__.py  llm.py
pulse/collectors/: __init__.py  github.py
pulse/db/: models.py
pulse/notifiers/: __init__.py  feishu.py
pulse/web/: __init__.py  app.py
scripts/: install.sh
share/: crop_screenshot.py  pulse-intro.md
